ClusterIP.yaml
apiVersion: v1
kind: Service
metedata:
  name: cluster-service
spec:
  type: ClusterIP
  selector:
    component: springapp
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
