LoadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-service
spec:
  type: LoadBalancer
  selector:
    component: springdata
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
