nodeport.yaml
apiVersion: v1
kind: Service
metadata: 
  name: sample-service
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30000
  selector:
    component: springapp
