springdata-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springdata-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: springdata
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
